5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1644_2443.log
== TEST (2019-04-11 12:32:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(x**2)*(3r-x))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))
	
-- ERROR:
File "XXXX", line 9
    Vc=(pi*(x**2)*(3r-x))/3
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:32:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(x**2)*(3*r-x))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Vc=(pi*(x**2)*(3*r-x))/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:33:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(x**2)*(3*r-x))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Vc=(pi*(x**2)*(3*r-x))/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:34:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))
	
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:35:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))
else:
	print("numero invalido")
	
-- OUTPUT:
170.5687
numero invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:54:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))

	
-- EXECUTION TIME:
0.177578
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:54:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: : "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))

	
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:55:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))

	
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:57:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc-Ve)
	print(round(Va,4))
if(n==2):
	Vc=Ve-Vc
	print(round(Vc,4))

	
-- EXECUTION TIME:
0.312836
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:15:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Ve)
	print(round(Va,4))
if(n==2):
	Vc=abs(Ve-Vc)
	print(round(Vc,4))

	
-- EXECUTION TIME:
0.172044
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:19:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio: "))
h=float(input("altura x: "))
n=int(input("1 para volume do ar e 2 volume de cobustivel: "))
from math import *
Ve=(4*pi*(r)**3)/3
Vc=(pi*(h**2)*(3*r-h))/3
if(n==1): 
	Va=abs(Vc)
	print(round(Va,4))
if(n==2):
	Vc=abs(Ve-Vc)
	print(round(Vc,4))

	
-- EXECUTION TIME:
0.156905
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
